# milap

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  Makefile  README.md  README.rst  package.json  pyproject.toml  setup.cfg  setup.py  test.py
.github/workflows/: publish.yml  python-publish.yml
docs/: CNAME  README.md  conf.py  coverpage.md  index.html  index.rst  sidebar.md
example/: create_meeting.py  sample.py
src/meet-api/: meet.py
src/meet_api/: main.py
src/meet_api_python/: __init__.py  skeleton.py
src/milap/: __init__.py  main.py
tests/: conftest.py  test_meet_api.py  test_skeleton.py
