[tool.poetry]
name = "google-meet-api"
version = "0.0.6"
description = ""
authors = ["Subhomoy Roy Choudhury <subhomoyrchoudhury@gmail.com>"]
readme = "README.md"
packages = [{include = "src/meet_api"}]

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.86.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
